--- a/demos/SecureSortingNetsExplained.ipynb
+++ b/demos/SecureSortingNetsExplained.ipynb
@@ -14,9 +14,9 @@
     "\n",
     "[Sorting networks](https://en.wikipedia.org/wiki/Sorting_network) are a classical type of comparison-based sorting algorithms. The basic operation (or, gate) in a sorting network is the *compare&swap* operation, which puts any two list elements $x[i]$ and $x[j]$, $i<j$, in ascending order. That is, only if $x[i]>x[j]$, elements $x[i]$ and $x[j]$ are swapped, and otherwise the compare&swap operation leaves the list unchanged. \n",
     "\n",
-    "A sorting network specifies the exact sequence of compare&swap operations to be applied to a list of a given length $n$. The particular sequence depends only on $n$, the length of the input list. Even when the input list is already in ascending order, the sorting network will perform exactly as many---and actually the same--compare&swap operations as when the input list would be in descending order. \n",
+    "A sorting network specifies the exact sequence of compare&swap operations to be applied to a list of a given length $n$. The particular sequence depends only on $n$, the length of the input list. Even when the input list is already in ascending order, the sorting network will perform exactly as many---and actually the same---compare&swap operations as when the input list would be in descending order. \n",
     "\n",
-    "For example, to sort a list of three numbers, one needs to perform three compare&swap operations, applied first to indices $(0,1)$, then to $(1,2)$, and finally once more to $(0,1)$.\n",
+    "For example, to sort a list of three numbers, one needs to perform three compare&swap operations with indices $(i,j)$ equal to $(0,1)$, then $(1,2)$, and finally once more $(0,1)$.\n",
     "\n",
     "Below, we will use odd-even merge sort and bitonic sort, which are two well-known practical sorting networks. \n",
     "\n",
@@ -31,15 +31,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2018-05-22 17:40:49,776 Start\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from mpyc.runtime import mpc    # load MPyC\n",
     "secint = mpc.SecInt()           # 32-bit secure MPyC integers\n",
@@ -55,7 +47,7 @@
     "\n",
     "Odd-even merge sort is an elegant, but somewhat intricate, sorting network. The details are nicely explained in the Wikipedia article [Batcher's Odd-Even Mergesort](https://en.wikipedia.org/wiki/Batcher_odd–even_mergesort). \n",
     "\n",
-    "For our purposes, however, there is no need to understand exactly how this particular sorting network works. The only thing that we need to do is to grab the following  [Example Python code](https://en.wikipedia.org/wiki/Batcher_odd–even_mergesort#Example_code) from this Wikipedia article."
+    "For our purposes, however, there is no need to understand exactly how this particular sorting network works. The only thing that we need to do is to grab the following  [example Python code](https://en.wikipedia.org/wiki/Batcher_odd–even_mergesort#Example_code) from this Wikipedia article."
    ]
   },
   {
@@ -144,7 +136,7 @@
       "    for i in oddeven_merge_sort(len(x)): compare_and_swap(x, *i)\n",
       "  File \"<ipython-input-2-a99b48746a99>\", line 30, in compare_and_swap\n",
       "    if x[a] > x[b]:\n",
-      "  File \"c:\\users\\bschoe\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\mpyc-0.29.0-py3.6.egg\\mpyc\\sectypes.py\", line 33, in __bool__\n",
+      "  File \"c:\\users\\berry\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\mpyc-0.29.0-py3.6.egg\\mpyc\\sectypes.py\", line 33, in __bool__\n",
       "    raise TypeError('cannot use secure type in Boolean expressions')\n",
       "TypeError: cannot use secure type in Boolean expressions\n"
      ]
@@ -213,7 +205,7 @@
     "\n",
     "For our next example, we consult the Wikipedia article [Bitonic Sorter](https://en.wikipedia.org/wiki/Bitonic_sorter).\n",
     "\n",
-    "We apply the same approach, grabbing the [Example Python code](https://en.wikipedia.org/wiki/Bitonic_sorter#Example_code) from the Wikipedia article, which is also designed to work for input lists whose length is an integral power of two."
+    "We apply the same approach, grabbing the [example Python code](https://en.wikipedia.org/wiki/Bitonic_sorter#Example_code) from the Wikipedia article, which is also designed to work for input lists whose length is an integral power of two."
    ]
   },
   {
@@ -302,7 +294,7 @@
       "    bitonic_compare(up, x)\n",
       "  File \"<ipython-input-7-8a5c3e13ac49>\", line 22, in bitonic_compare\n",
       "    if (x[i] > x[i + dist]) == up:\n",
-      "  File \"c:\\users\\bschoe\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\mpyc-0.29.0-py3.6.egg\\mpyc\\sectypes.py\", line 33, in __bool__\n",
+      "  File \"c:\\users\\berry\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\mpyc-0.29.0-py3.6.egg\\mpyc\\sectypes.py\", line 33, in __bool__\n",
       "    raise TypeError('cannot use secure type in Boolean expressions')\n",
       "TypeError: cannot use secure type in Boolean expressions\n"
      ]
@@ -331,7 +323,7 @@
    "source": [
     "def bitonic_compare(up, x):\n",
     "    dist = len(x) // 2\n",
-    "    up = secint(bool(up))                              # convert public Boolean up into a `secint` bit \n",
+    "    up = secint(up)                                    # convert public Boolean up into `secint` bit \n",
     "    for i in range(dist):\n",
     "        b = (x[i] > x[i + dist]) ^ ~up                 # secure xor of comparison bit and negated up\n",
     "        d = b * (x[i + dist] - x[i])                   # d = 0 or d = x[i + dist] - x[i]\n",
@@ -371,7 +363,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-05-22 17:40:50,091 Stop -- elapsed time: 0:00:00.310817\n"
+      "2018-05-23 08:50:13,318 Stop -- elapsed time: 0:00:01.114068\n"
      ]
     }
    ],
@@ -383,7 +375,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Python script [sort.py](sort.py) shows how to do secure bitonic sort for lists of arbitrary length, which is adapted from this [general bitonic sorter](http://www.iti.fh-flensburg.de/lang/algorithmen/sortieren/bitonic/oddn.htm)."
+    "The Python script [sort.py](sort.py) shows how to do secure bitonic sort for lists of arbitrary length, adapted from this general [bitonic sorter](http://www.iti.fh-flensburg.de/lang/algorithmen/sortieren/bitonic/oddn.htm)."
    ]
   }
  ],
