--- a/demos/SecretSantaExplained.ipynb
+++ b/demos/SecretSantaExplained.ipynb
@@ -69,7 +69,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-05-21 11:57:41,424 Start\n"
+      "2018-05-23 08:58:26,927 Start\n"
      ]
     }
    ],
@@ -301,11 +301,11 @@
       "Random unit vectors:\n",
       " 1 [1]\n",
       " 2 [0, 1]\n",
-      " 3 [1, 0, 0]\n",
+      " 3 [0, 0, 1]\n",
       " 4 [0, 1, 0, 0]\n",
       " 5 [0, 0, 1, 0, 0]\n",
-      " 6 [0, 0, 0, 1, 0, 0]\n",
-      " 7 [0, 1, 0, 0, 0, 0, 0]\n"
+      " 6 [1, 0, 0, 0, 0, 0]\n",
+      " 7 [1, 0, 0, 0, 0, 0, 0]\n"
      ]
     }
    ],
@@ -327,12 +327,12 @@
      "text": [
       "Random permutations:\n",
       " 1 [0]\n",
-      " 2 [0, 1]\n",
-      " 3 [1, 2, 0]\n",
-      " 4 [1, 3, 0, 2]\n",
-      " 5 [0, 4, 2, 1, 3]\n",
-      " 6 [2, 5, 1, 4, 0, 3]\n",
-      " 7 [3, 5, 4, 6, 2, 0, 1]\n"
+      " 2 [1, 0]\n",
+      " 3 [0, 2, 1]\n",
+      " 4 [0, 3, 2, 1]\n",
+      " 5 [0, 1, 4, 2, 3]\n",
+      " 6 [0, 1, 3, 5, 4, 2]\n",
+      " 7 [4, 2, 3, 6, 5, 0, 1]\n"
      ]
     }
    ],
@@ -355,10 +355,10 @@
       "Random derangements:\n",
       " 2 [1, 0]\n",
       " 3 [1, 2, 0]\n",
-      " 4 [3, 0, 1, 2]\n",
-      " 5 [2, 0, 1, 4, 3]\n",
-      " 6 [3, 4, 5, 2, 1, 0]\n",
-      " 7 [6, 3, 4, 1, 0, 2, 5]\n"
+      " 4 [1, 2, 3, 0]\n",
+      " 5 [1, 0, 4, 2, 3]\n",
+      " 6 [5, 3, 4, 0, 1, 2]\n",
+      " 7 [5, 3, 0, 1, 6, 2, 4]\n"
      ]
     }
    ],
@@ -385,7 +385,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-05-21 11:57:41,796 Stop -- elapsed time: 0:00:00.365283\n"
+      "2018-05-23 08:58:27,896 Stop -- elapsed time: 0:00:00.953313\n"
      ]
     }
    ],
@@ -399,9 +399,9 @@
    "source": [
     "## Deploying the Python code with multiple parties\n",
     "\n",
-    "All the Python code contained in this notebook can be saved as Python script using the `Download as` option from the `File` menu in Jupyter notebooks. Choose to download the notebook as `Python (.py)`.\n",
+    "All the Python code contained in this notebook can be saved as a Python script using the `Download as` option from the `File` menu in Jupyter notebooks. Choose to download the notebook as `Python (.py)`.\n",
     "\n",
-    "We did so, using the file name `SecretSantaExplained.py` and stored this file in the same directory as the present notebook. Then we can run the Python script, as shown below. \n",
+    "We have done so and the resulting file [SecretSantaExplained.py](SecretSantaExplained.py) is stored in the same directory as the present notebook. Now we can run the Python script, as shown below. \n",
     "\n",
     "First we show a run with one party only. However, this time the code runs outside the Jupyter notebook, using its own Python interpreter. "
    ]
@@ -417,7 +417,7 @@
      "text": [
       "\n",
       "C:\\Users\\Berry\\Documents\\GitHub\\mpyc\\demos>python run.py 1 SecretSantaExplained.py \n",
-      "2018-05-21 11:57:42,274 Start\n",
+      "2018-05-23 08:58:28,496 Start\n",
       "Example: (5+13)*(5-13) = -144\n",
       "Random unit vectors:\n",
       " 1 [1]\n",
@@ -442,7 +442,7 @@
       " 5 [2, 3, 4, 0, 1]\n",
       " 6 [5, 0, 3, 2, 1, 4]\n",
       " 7 [1, 0, 6, 5, 2, 4, 3]\n",
-      "2018-05-21 11:57:42,527 Stop -- elapsed time: 0:00:00.252734\n"
+      "2018-05-23 08:58:28,761 Stop -- elapsed time: 0:00:00.249998\n"
      ]
     },
     {
@@ -480,10 +480,10 @@
      "text": [
       "\n",
       "C:\\Users\\Berry\\Documents\\GitHub\\mpyc\\demos>python run.py 3 SecretSantaExplained.py \n",
-      "2018-05-21 11:57:43,146 Start\n",
-      "2018-05-21 11:57:43,152 Listening on port 11365\n",
-      "2018-05-21 11:57:43,152 Connecting to <_Party 1: localhost:11366>\n",
-      "2018-05-21 11:57:43,669 Connecting to <_Party 2: localhost:11367>\n",
+      "2018-05-23 08:58:29,416 Start\n",
+      "2018-05-23 08:58:29,416 Listening on port 11365\n",
+      "2018-05-23 08:58:29,416 Connecting to <_Party 1: localhost:11366>\n",
+      "2018-05-23 08:58:29,947 Connecting to <_Party 2: localhost:11367>\n",
       "Example: (5+13)*(5-13) = -144\n",
       "Random unit vectors:\n",
       " 1 [1]\n",
@@ -508,7 +508,7 @@
       " 5 [1, 0, 3, 4, 2]\n",
       " 6 [1, 0, 3, 4, 5, 2]\n",
       " 7 [3, 0, 1, 5, 6, 2, 4]\n",
-      "2018-05-21 11:57:44,352 Stop -- elapsed time: 0:00:01.202419\n"
+      "2018-05-23 08:58:30,744 Stop -- elapsed time: 0:00:01.328119\n"
      ]
     },
     {
@@ -544,12 +544,12 @@
      "text": [
       "\n",
       "C:\\Users\\Berry\\Documents\\GitHub\\mpyc\\demos>python run.py 5 SecretSantaExplained.py \n",
-      "2018-05-21 11:57:45,119 Start\n",
-      "2018-05-21 11:57:45,125 Listening on port 11365\n",
-      "2018-05-21 11:57:45,125 Connecting to <_Party 1: localhost:11366>\n",
-      "2018-05-21 11:57:45,654 Connecting to <_Party 2: localhost:11367>\n",
-      "2018-05-21 11:57:45,658 Connecting to <_Party 3: localhost:11368>\n",
-      "2018-05-21 11:57:45,663 Connecting to <_Party 4: localhost:11369>\n",
+      "2018-05-23 08:58:31,658 Start\n",
+      "2018-05-23 08:58:31,658 Listening on port 11365\n",
+      "2018-05-23 08:58:31,658 Connecting to <_Party 1: localhost:11366>\n",
+      "2018-05-23 08:58:32,184 Connecting to <_Party 2: localhost:11367>\n",
+      "2018-05-23 08:58:32,184 Connecting to <_Party 3: localhost:11368>\n",
+      "2018-05-23 08:58:32,184 Connecting to <_Party 4: localhost:11369>\n",
       "Example: (5+13)*(5-13) = -144\n",
       "Random unit vectors:\n",
       " 1 [1]\n",
@@ -574,7 +574,7 @@
       " 5 [3, 0, 1, 4, 2]\n",
       " 6 [4, 0, 3, 2, 5, 1]\n",
       " 7 [1, 6, 5, 2, 3, 0, 4]\n",
-      "2018-05-21 11:57:46,906 Stop -- elapsed time: 0:00:01.782299\n"
+      "2018-05-23 08:58:34,811 Stop -- elapsed time: 0:00:03.153135\n"
      ]
     },
     {
@@ -596,9 +596,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If desired, the code can also be run with two or four parties. The inlcuded test setup supports up to $m=5$ parties, of which at most $t$ can be corrupt, with $0\\leq t\\leq \\lfloor (m-1)/2 \\rfloor$.\n",
+    "If desired, the code can also be run with two or four parties. The included test setup supports up to $m=5$ parties, of which at most $t$ can be corrupt, with $0\\leq t\\leq \\lfloor (m-1)/2 \\rfloor$.\n",
     "\n",
-    "The included Python script `secretsanta.py` contains a slightly more extensive demo."
+    "The Python script [secretsanta.py](secretsanta.py) contains a slightly more extensive demo."
    ]
   }
  ],
