--- a/demos/SecureSortingNetsExplained.ipynb
+++ b/demos/SecureSortingNetsExplained.ipynb
@@ -31,7 +31,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018-09-27 10:05:29,486 Start MPyC runtime v0.3.5\n"
+     ]
+    }
+   ],
    "source": [
     "from mpyc.runtime import mpc    # load MPyC\n",
     "secint = mpc.SecInt()           # 32-bit secure MPyC integers\n",
@@ -136,7 +144,7 @@
       "    for i in oddeven_merge_sort(len(x)): compare_and_swap(x, *i)\n",
       "  File \"<ipython-input-2-a99b48746a99>\", line 30, in compare_and_swap\n",
       "    if x[a] > x[b]:\n",
-      "  File \"c:\\users\\berry\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\mpyc-0.29.0-py3.6.egg\\mpyc\\sectypes.py\", line 33, in __bool__\n",
+      "  File \"c:\\users\\berry\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\mpyc-0.3.5-py3.6.egg\\mpyc\\sectypes.py\", line 33, in __bool__\n",
       "    raise TypeError('cannot use secure type in Boolean expressions')\n",
       "TypeError: cannot use secure type in Boolean expressions\n"
      ]
@@ -166,7 +174,7 @@
    "outputs": [],
    "source": [
     "def compare_and_swap(x, a, b):\n",
-    "    c = x[a] > x[b]                  # secure comparison, c is a secint representing a secret-shared bit\n",
+    "    c = x[a] > x[b]                  # secure comparison, secint c represents a secret-shared bit\n",
     "    d = c * (x[b] - x[a])            # secure subtraction\n",
     "    x[a], x[b] = x[a] + d, x[b] - d  # secure swap: x[a], x[b] swapped if only if c=1"
    ]
@@ -294,7 +302,7 @@
       "    bitonic_compare(up, x)\n",
       "  File \"<ipython-input-7-8a5c3e13ac49>\", line 22, in bitonic_compare\n",
       "    if (x[i] > x[i + dist]) == up:\n",
-      "  File \"c:\\users\\berry\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\mpyc-0.29.0-py3.6.egg\\mpyc\\sectypes.py\", line 33, in __bool__\n",
+      "  File \"c:\\users\\berry\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\mpyc-0.3.5-py3.6.egg\\mpyc\\sectypes.py\", line 33, in __bool__\n",
       "    raise TypeError('cannot use secure type in Boolean expressions')\n",
       "TypeError: cannot use secure type in Boolean expressions\n"
      ]
@@ -363,7 +371,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-05-23 08:50:13,318 Stop -- elapsed time: 0:00:01.114068\n"
+      "2018-09-27 10:05:30,790 Stop MPyC runtime -- elapsed time: 0:00:01.287664\n"
      ]
     }
    ],
@@ -395,7 +403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
