--- a/demos/SecretSantaExplained.ipynb
+++ b/demos/SecretSantaExplained.ipynb
@@ -69,7 +69,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-05-23 08:58:26,927 Start\n"
+      "2018-09-27 09:33:27,712 Start MPyC runtime v0.3.5\n"
      ]
     }
    ],
@@ -286,7 +286,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m = 7"
+    "N = 7"
    ]
   },
   {
@@ -302,16 +302,16 @@
       " 1 [1]\n",
       " 2 [0, 1]\n",
       " 3 [0, 0, 1]\n",
-      " 4 [0, 1, 0, 0]\n",
-      " 5 [0, 0, 1, 0, 0]\n",
-      " 6 [1, 0, 0, 0, 0, 0]\n",
-      " 7 [1, 0, 0, 0, 0, 0, 0]\n"
+      " 4 [0, 0, 0, 1]\n",
+      " 5 [0, 0, 0, 1, 0]\n",
+      " 6 [0, 0, 0, 0, 1, 0]\n",
+      " 7 [0, 0, 0, 0, 0, 1, 0]\n"
      ]
     }
    ],
    "source": [
     "print('Random unit vectors:')\n",
-    "for n in range(1, m + 1):\n",
+    "for n in range(1, N + 1):\n",
     "    s = mpc.run(mpc.output(random_unit_vector(n)))\n",
     "    print('{0:2} {1}'.format(n, s))"
    ]
@@ -328,17 +328,17 @@
       "Random permutations:\n",
       " 1 [0]\n",
       " 2 [1, 0]\n",
-      " 3 [0, 2, 1]\n",
-      " 4 [0, 3, 2, 1]\n",
-      " 5 [0, 1, 4, 2, 3]\n",
-      " 6 [0, 1, 3, 5, 4, 2]\n",
-      " 7 [4, 2, 3, 6, 5, 0, 1]\n"
+      " 3 [1, 0, 2]\n",
+      " 4 [2, 1, 3, 0]\n",
+      " 5 [1, 0, 3, 4, 2]\n",
+      " 6 [1, 2, 3, 0, 5, 4]\n",
+      " 7 [5, 4, 2, 6, 0, 1, 3]\n"
      ]
     }
    ],
    "source": [
     "print('Random permutations:')\n",
-    "for n in range(1, m + 1):\n",
+    "for n in range(1, N + 1):\n",
     "    s = mpc.run(mpc.output(random_permutation(n)))\n",
     "    print('{0:2} {1}'.format(n, s))"
    ]
@@ -354,26 +354,19 @@
      "text": [
       "Random derangements:\n",
       " 2 [1, 0]\n",
-      " 3 [1, 2, 0]\n",
-      " 4 [1, 2, 3, 0]\n",
-      " 5 [1, 0, 4, 2, 3]\n",
-      " 6 [5, 3, 4, 0, 1, 2]\n",
-      " 7 [5, 3, 0, 1, 6, 2, 4]\n"
+      " 3 [2, 0, 1]\n",
+      " 4 [2, 3, 1, 0]\n",
+      " 5 [4, 0, 3, 2, 1]\n",
+      " 6 [4, 5, 0, 2, 3, 1]\n",
+      " 7 [3, 4, 5, 2, 1, 6, 0]\n"
      ]
     }
    ],
    "source": [
     "print('Random derangements:')\n",
-    "for n in range(2, m + 1):\n",
+    "for n in range(2, N + 1):\n",
     "    s = mpc.run(mpc.output(random_derangement(n)))\n",
     "    print('{0:2} {1}'.format(n, s))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This concludes the explanation of our MPyC protocol for the Secret Santa problem. The demo `secretsanta.py` can be run with  relies on the same "
    ]
   },
   {
@@ -385,7 +378,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-05-23 08:58:27,896 Stop -- elapsed time: 0:00:00.953313\n"
+      "2018-09-27 09:33:28,959 Stop MPyC runtime -- elapsed time: 0:00:01.227762\n"
      ]
     }
    ],
@@ -416,8 +409,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "C:\\Users\\Berry\\Documents\\GitHub\\mpyc\\demos>python run.py 1 SecretSantaExplained.py \n",
-      "2018-05-23 08:58:28,496 Start\n",
+      "C:\\Users\\Berry\\Documents\\GitHub\\mympyc\\demos>python run.py 1 SecretSantaExplained.py \n",
+      "2018-09-27 09:33:29,624 Start MPyC runtime v0.3.5\n",
       "Example: (5+13)*(5-13) = -144\n",
       "Random unit vectors:\n",
       " 1 [1]\n",
@@ -442,7 +435,7 @@
       " 5 [2, 3, 4, 0, 1]\n",
       " 6 [5, 0, 3, 2, 1, 4]\n",
       " 7 [1, 0, 6, 5, 2, 4, 3]\n",
-      "2018-05-23 08:58:28,761 Stop -- elapsed time: 0:00:00.249998\n"
+      "2018-09-27 09:33:29,889 Stop MPyC runtime -- elapsed time: 0:00:00.265625\n"
      ]
     },
     {
@@ -479,11 +472,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "C:\\Users\\Berry\\Documents\\GitHub\\mpyc\\demos>python run.py 3 SecretSantaExplained.py \n",
-      "2018-05-23 08:58:29,416 Start\n",
-      "2018-05-23 08:58:29,416 Listening on port 11365\n",
-      "2018-05-23 08:58:29,416 Connecting to <_Party 1: localhost:11366>\n",
-      "2018-05-23 08:58:29,947 Connecting to <_Party 2: localhost:11367>\n",
+      "C:\\Users\\Berry\\Documents\\GitHub\\mympyc\\demos>python run.py 3 SecretSantaExplained.py \n",
+      "2018-09-27 09:33:30,561 Start MPyC runtime v0.3.5\n",
+      "2018-09-27 09:33:31,092 Connected to all parties.\n",
       "Example: (5+13)*(5-13) = -144\n",
       "Random unit vectors:\n",
       " 1 [1]\n",
@@ -508,7 +499,7 @@
       " 5 [1, 0, 3, 4, 2]\n",
       " 6 [1, 0, 3, 4, 5, 2]\n",
       " 7 [3, 0, 1, 5, 6, 2, 4]\n",
-      "2018-05-23 08:58:30,744 Stop -- elapsed time: 0:00:01.328119\n"
+      "2018-09-27 09:33:31,905 Stop MPyC runtime -- elapsed time: 0:00:01.343741\n"
      ]
     },
     {
@@ -536,20 +527,18 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      "C:\\Users\\Berry\\Documents\\GitHub\\mpyc\\demos>python run.py 5 SecretSantaExplained.py \n",
-      "2018-05-23 08:58:31,658 Start\n",
-      "2018-05-23 08:58:31,658 Listening on port 11365\n",
-      "2018-05-23 08:58:31,658 Connecting to <_Party 1: localhost:11366>\n",
-      "2018-05-23 08:58:32,184 Connecting to <_Party 2: localhost:11367>\n",
-      "2018-05-23 08:58:32,184 Connecting to <_Party 3: localhost:11368>\n",
-      "2018-05-23 08:58:32,184 Connecting to <_Party 4: localhost:11369>\n",
+      "C:\\Users\\Berry\\Documents\\GitHub\\mympyc\\demos>python run.py 5 SecretSantaExplained.py \n",
+      "2018-09-27 09:33:32,959 Start MPyC runtime v0.3.5\n",
+      "2018-09-27 09:33:33,522 Connected to all parties.\n",
       "Example: (5+13)*(5-13) = -144\n",
       "Random unit vectors:\n",
       " 1 [1]\n",
@@ -574,7 +563,7 @@
       " 5 [3, 0, 1, 4, 2]\n",
       " 6 [4, 0, 3, 2, 5, 1]\n",
       " 7 [1, 6, 5, 2, 3, 0, 4]\n",
-      "2018-05-23 08:58:34,811 Stop -- elapsed time: 0:00:03.153135\n"
+      "2018-09-27 09:33:35,725 Stop MPyC runtime -- elapsed time: 0:00:02.749991\n"
      ]
     },
     {
@@ -598,7 +587,7 @@
    "source": [
     "If desired, the code can also be run with two or four parties. The included test setup supports up to $m=5$ parties, of which at most $t$ can be corrupt, with $0\\leq t\\leq \\lfloor (m-1)/2 \\rfloor$.\n",
     "\n",
-    "The Python script [secretsanta.py](secretsanta.py) contains a slightly more extensive demo."
+    "This concludes the explanation of our MPyC protocol for the Secret Santa problem. The Python script [secretsanta.py](secretsanta.py) contains a slightly more extensive demo, showing how secure fixed-point arithmetic or secure prime fields can be used instead of secure integers."
    ]
   }
  ],
@@ -618,7 +607,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
