Support binary fields, demo AES. (#5)

--- a/demos/SecretSantaExplained.ipynb
+++ b/demos/SecretSantaExplained.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,14 +62,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-09-27 09:33:27,712 Start MPyC runtime v0.3.5\n"
+      "2018-10-09 14:06:34,659 Start MPyC runtime v0.4.1\n"
      ]
     }
    ],
@@ -90,14 +90,14 @@
    "source": [
     "#### _Quick note on MPyC coroutines_\n",
     "\n",
-    "All computations pertaining to secure integers of type `secint` are done asynchronously in MPyC. The implementation of MPyC builds heavily on Python's `asyncio` module, available in Python 3.5+. Secure computations in MPyC are in fact implemented as MPyC coroutines, which are a special type of Python coroutines.\n",
+    "All computations pertaining to secure integers of type `secint` are done asynchronously in MPyC. The implementation of MPyC builds heavily on Python's `asyncio` module. Secure computations in MPyC are in fact implemented as MPyC coroutines, which are a special type of Python coroutines.\n",
     "\n",
     "For example, consider the following code fragment."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
     "In this notebook, however, we will not focus on the asynchronous aspects of MPyC. Readers not familiar with coroutines and asynchronous computation may therefore skip to the next section, ignoring all aspects of asynchronous computation. Most MPyC code is meant to be understandable without bothering about the (order of) execution of the code anyway!\n",
     "\n",
     "A Python coroutine, defined by the keyword `async` at the start of a function definition, is turned into an MPyC coroutine by using the decorator `mpc.coroutine`.\n",
-    "When called, an MPyC coroutine will return immediately (non-blocking). The main difference with Python coroutines is that an MPyC coroutine will return a placeholder or, more generally, nested lists/tuples containing placeholders. The placeholders are typed (e.g., of type `secint`, or any other secure MPyC type), and the type of the placeholders is defined by the first `await` expression in the MPyC coroutine, using the `mpc.returnType` method. "
+    "When called, an MPyC coroutine will return immediately (nonblocking). The main difference with Python coroutines is that an MPyC coroutine will return a placeholder or, more generally, nested lists/tuples containing placeholders. The placeholders are typed (e.g., of type `secint`, or any other secure MPyC type), and the type of the placeholders is defined by the first `await` expression in the MPyC coroutine, using the `mpc.returnType` method. "
    ]
   },
   {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
     "    if await mpc.is_zero_public(t):               # publicly test whether t is equal to zero\n",
     "        return random_derangement(n)              # recurse if t is zero\n",
     "    else:\n",
-    "        return p                                  # done if t is non-zero"
+    "        return p                                  # done if t is nonzero"
    ]
   },
   {
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,14 +233,14 @@
     "\n",
     "Let $n\\geq2$, and suppose $n$ is even. We generate a secret random bit $b$ and, recursively, we generate a random unit vector $x$ of length $n/2$. We multiply $b$ with all elements of $x$, yielding vector $y$. So, for the example above, we get $y = [0,0,0,0]$ if $b=0$ and $y = x = [0,0,1,0]$ if $b=1$. Also, we see that $x-y = x$ if $b=0$ and $x-y = [0,0,0,0]$ if $b=1$. The correct output is thus obtained by taking the concatenation of $y$ and $x-y$.\n",
     "\n",
-    "For odd $n$, we try the same approach, but a slight problem arises. We cannot generate a vector of non-integral length $n/2$. Instead, we recursively generate a random unit vector $x$ of length $m=(n+1)/2$. As before, we also generate a random bit $b$. Altogether, we thus get $2 m = n+1$ equally likely values for $b$ and $x$ jointly. Since our target is a uniformly random unit vector of length $n$, we need to reject one out of the $2m$ possible values for $b$ and $x$. Below we choose to reject in case $b=1$ and $x[0]=1$.\n",
+    "For odd $n$, we try the same approach, but a slight problem arises. We cannot generate a vector of nonintegral length $n/2$. Instead, we recursively generate a random unit vector $x$ of length $m=(n+1)/2$. As before, we also generate a random bit $b$. Altogether, we thus get $2 m = n+1$ equally likely values for $b$ and $x$ jointly. Since our target is a uniformly random unit vector of length $n$, we need to reject one out of the $2m$ possible values for $b$ and $x$. Below we choose to reject in case $b=1$ and $x[0]=1$.\n",
     "\n",
     "This leaves us with the case $n=1$, which is handled by simply returning $[1]$, the only unit vector of length $1$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,65 +282,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "N = 7"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Random unit vectors:\n",
-      " 1 [1]\n",
-      " 2 [0, 1]\n",
-      " 3 [0, 0, 1]\n",
-      " 4 [0, 0, 0, 1]\n",
-      " 5 [0, 0, 0, 1, 0]\n",
-      " 6 [0, 0, 0, 0, 1, 0]\n",
-      " 7 [0, 0, 0, 0, 0, 1, 0]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('Random unit vectors:')\n",
-    "for n in range(1, N + 1):\n",
-    "    s = mpc.run(mpc.output(random_unit_vector(n)))\n",
-    "    print('{0:2} {1}'.format(n, s))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Random permutations:\n",
-      " 1 [0]\n",
-      " 2 [1, 0]\n",
-      " 3 [1, 0, 2]\n",
-      " 4 [2, 1, 3, 0]\n",
-      " 5 [1, 0, 3, 4, 2]\n",
-      " 6 [1, 2, 3, 0, 5, 4]\n",
-      " 7 [5, 4, 2, 6, 0, 1, 3]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('Random permutations:')\n",
-    "for n in range(1, N + 1):\n",
-    "    s = mpc.run(mpc.output(random_permutation(n)))\n",
-    "    print('{0:2} {1}'.format(n, s))"
    ]
   },
   {
@@ -352,21 +298,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random derangements:\n",
-      " 2 [1, 0]\n",
-      " 3 [2, 0, 1]\n",
-      " 4 [2, 3, 1, 0]\n",
-      " 5 [4, 0, 3, 2, 1]\n",
-      " 6 [4, 5, 0, 2, 3, 1]\n",
-      " 7 [3, 4, 5, 2, 1, 6, 0]\n"
+      "Random unit vectors:\n",
+      " 1 [1]\n",
+      " 2 [0, 1]\n",
+      " 3 [1, 0, 0]\n",
+      " 4 [0, 1, 0, 0]\n",
+      " 5 [0, 0, 1, 0, 0]\n",
+      " 6 [0, 1, 0, 0, 0, 0]\n",
+      " 7 [0, 0, 0, 0, 0, 1, 0]\n"
      ]
     }
    ],
    "source": [
-    "print('Random derangements:')\n",
-    "for n in range(2, N + 1):\n",
-    "    s = mpc.run(mpc.output(random_derangement(n)))\n",
-    "    print('{0:2} {1}'.format(n, s))"
+    "print('Random unit vectors:')\n",
+    "for n in range(1, N + 1):\n",
+    "    s = mpc.run(mpc.output(random_unit_vector(n)))\n",
+    "    print(f'{n:2} {s}')"
    ]
   },
   {
@@ -378,7 +325,60 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-09-27 09:33:28,959 Stop MPyC runtime -- elapsed time: 0:00:01.227762\n"
+      "Random permutations:\n",
+      " 1 [0]\n",
+      " 2 [0, 1]\n",
+      " 3 [1, 0, 2]\n",
+      " 4 [3, 1, 0, 2]\n",
+      " 5 [4, 1, 0, 3, 2]\n",
+      " 6 [4, 0, 1, 2, 5, 3]\n",
+      " 7 [5, 0, 6, 3, 4, 1, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Random permutations:')\n",
+    "for n in range(1, N + 1):\n",
+    "    s = mpc.run(mpc.output(random_permutation(n)))\n",
+    "    print(f'{n:2} {s}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random derangements:\n",
+      " 2 [1, 0]\n",
+      " 3 [2, 0, 1]\n",
+      " 4 [1, 2, 3, 0]\n",
+      " 5 [2, 0, 1, 4, 3]\n",
+      " 6 [5, 3, 4, 2, 1, 0]\n",
+      " 7 [5, 2, 6, 1, 0, 4, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Random derangements:')\n",
+    "for n in range(2, N + 1):\n",
+    "    s = mpc.run(mpc.output(random_derangement(n)))\n",
+    "    print(f'{n:2} {s}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018-10-09 14:06:34,915 Stop MPyC runtime -- elapsed time: 0:00:00.255697\n"
      ]
     }
    ],
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -409,33 +409,33 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "C:\\Users\\Berry\\Documents\\GitHub\\mympyc\\demos>python run.py 1 SecretSantaExplained.py \n",
-      "2018-09-27 09:33:29,624 Start MPyC runtime v0.3.5\n",
+      "C:\\Users\\bschoe\\Documents\\GitHub\\mympyc\\demos>python run.py 1 SecretSantaExplained.py \n",
+      "2018-10-09 14:06:35,215 Start MPyC runtime v0.4.1\n",
       "Example: (5+13)*(5-13) = -144\n",
       "Random unit vectors:\n",
       " 1 [1]\n",
       " 2 [0, 1]\n",
-      " 3 [1, 0, 0]\n",
+      " 3 [0, 1, 0]\n",
       " 4 [1, 0, 0, 0]\n",
       " 5 [1, 0, 0, 0, 0]\n",
-      " 6 [0, 0, 0, 0, 0, 1]\n",
-      " 7 [0, 1, 0, 0, 0, 0, 0]\n",
+      " 6 [0, 1, 0, 0, 0, 0]\n",
+      " 7 [1, 0, 0, 0, 0, 0, 0]\n",
       "Random permutations:\n",
       " 1 [0]\n",
       " 2 [1, 0]\n",
-      " 3 [0, 2, 1]\n",
-      " 4 [2, 0, 1, 3]\n",
-      " 5 [2, 0, 4, 3, 1]\n",
-      " 6 [4, 2, 1, 5, 3, 0]\n",
-      " 7 [5, 0, 3, 1, 4, 6, 2]\n",
+      " 3 [1, 2, 0]\n",
+      " 4 [3, 1, 2, 0]\n",
+      " 5 [1, 0, 3, 4, 2]\n",
+      " 6 [0, 1, 2, 4, 5, 3]\n",
+      " 7 [1, 3, 2, 5, 0, 4, 6]\n",
       "Random derangements:\n",
       " 2 [1, 0]\n",
       " 3 [2, 0, 1]\n",
-      " 4 [1, 3, 0, 2]\n",
-      " 5 [2, 3, 4, 0, 1]\n",
-      " 6 [5, 0, 3, 2, 1, 4]\n",
-      " 7 [1, 0, 6, 5, 2, 4, 3]\n",
-      "2018-09-27 09:33:29,889 Stop MPyC runtime -- elapsed time: 0:00:00.265625\n"
+      " 4 [1, 0, 3, 2]\n",
+      " 5 [1, 0, 3, 4, 2]\n",
+      " 6 [1, 5, 3, 2, 0, 4]\n",
+      " 7 [6, 5, 3, 2, 0, 4, 1]\n",
+      "2018-10-09 14:06:35,387 Stop MPyC runtime -- elapsed time: 0:00:00.171880\n"
      ]
     },
     {
@@ -443,7 +443,7 @@
      "output_type": "stream",
      "text": [
       "Traceback (most recent call last):\n",
-      "  File \"SecretSantaExplained.py\", line 249, in <module>\n",
+      "  File \"SecretSantaExplained.py\", line 247, in <module>\n",
       "    get_ipython().system('run 1 SecretSantaExplained.py')\n",
       "NameError: name 'get_ipython' is not defined\n"
      ]
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -472,34 +472,34 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "C:\\Users\\Berry\\Documents\\GitHub\\mympyc\\demos>python run.py 3 SecretSantaExplained.py \n",
-      "2018-09-27 09:33:30,561 Start MPyC runtime v0.3.5\n",
-      "2018-09-27 09:33:31,092 Connected to all parties.\n",
+      "C:\\Users\\bschoe\\Documents\\GitHub\\mympyc\\demos>python run.py 3 SecretSantaExplained.py \n",
+      "2018-10-09 14:06:35,825 Start MPyC runtime v0.4.1\n",
+      "2018-10-09 14:06:36,356 Connected to all parties.\n",
       "Example: (5+13)*(5-13) = -144\n",
       "Random unit vectors:\n",
       " 1 [1]\n",
-      " 2 [0, 1]\n",
+      " 2 [1, 0]\n",
       " 3 [0, 0, 1]\n",
-      " 4 [1, 0, 0, 0]\n",
-      " 5 [0, 1, 0, 0, 0]\n",
-      " 6 [0, 1, 0, 0, 0, 0]\n",
-      " 7 [0, 1, 0, 0, 0, 0, 0]\n",
+      " 4 [0, 1, 0, 0]\n",
+      " 5 [0, 0, 1, 0, 0]\n",
+      " 6 [0, 0, 0, 0, 0, 1]\n",
+      " 7 [0, 0, 0, 0, 0, 0, 1]\n",
       "Random permutations:\n",
       " 1 [0]\n",
       " 2 [0, 1]\n",
-      " 3 [2, 1, 0]\n",
-      " 4 [1, 3, 0, 2]\n",
-      " 5 [3, 0, 2, 1, 4]\n",
-      " 6 [5, 4, 0, 1, 2, 3]\n",
-      " 7 [4, 1, 3, 0, 6, 2, 5]\n",
+      " 3 [1, 0, 2]\n",
+      " 4 [3, 1, 0, 2]\n",
+      " 5 [0, 3, 1, 4, 2]\n",
+      " 6 [4, 3, 0, 2, 5, 1]\n",
+      " 7 [6, 3, 0, 5, 2, 1, 4]\n",
       "Random derangements:\n",
       " 2 [1, 0]\n",
       " 3 [1, 2, 0]\n",
-      " 4 [3, 2, 1, 0]\n",
-      " 5 [1, 0, 3, 4, 2]\n",
-      " 6 [1, 0, 3, 4, 5, 2]\n",
-      " 7 [3, 0, 1, 5, 6, 2, 4]\n",
-      "2018-09-27 09:33:31,905 Stop MPyC runtime -- elapsed time: 0:00:01.343741\n"
+      " 4 [2, 0, 3, 1]\n",
+      " 5 [2, 3, 0, 4, 1]\n",
+      " 6 [2, 4, 3, 5, 0, 1]\n",
+      " 7 [3, 0, 5, 1, 2, 6, 4]\n",
+      "2018-10-09 14:06:36,684 Stop MPyC runtime -- elapsed time: 0:00:00.859395\n"
      ]
     },
     {
@@ -507,7 +507,7 @@
      "output_type": "stream",
      "text": [
       "Traceback (most recent call last):\n",
-      "  File \"SecretSantaExplained.py\", line 249, in <module>\n",
+      "  File \"SecretSantaExplained.py\", line 247, in <module>\n",
       "    get_ipython().system('run 1 SecretSantaExplained.py')\n",
       "NameError: name 'get_ipython' is not defined\n"
      ]
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -536,34 +536,34 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "C:\\Users\\Berry\\Documents\\GitHub\\mympyc\\demos>python run.py 5 SecretSantaExplained.py \n",
-      "2018-09-27 09:33:32,959 Start MPyC runtime v0.3.5\n",
-      "2018-09-27 09:33:33,522 Connected to all parties.\n",
+      "C:\\Users\\bschoe\\Documents\\GitHub\\mympyc\\demos>python run.py 5 SecretSantaExplained.py \n",
+      "2018-10-09 14:08:15,915 Start MPyC runtime v0.4.1\n",
+      "2018-10-09 14:08:16,431 Connected to all parties.\n",
       "Example: (5+13)*(5-13) = -144\n",
       "Random unit vectors:\n",
       " 1 [1]\n",
       " 2 [1, 0]\n",
-      " 3 [1, 0, 0]\n",
-      " 4 [0, 1, 0, 0]\n",
-      " 5 [0, 1, 0, 0, 0]\n",
-      " 6 [0, 0, 1, 0, 0, 0]\n",
-      " 7 [0, 0, 0, 1, 0, 0, 0]\n",
+      " 3 [0, 1, 0]\n",
+      " 4 [1, 0, 0, 0]\n",
+      " 5 [0, 0, 0, 1, 0]\n",
+      " 6 [0, 0, 0, 0, 0, 1]\n",
+      " 7 [0, 0, 0, 0, 0, 0, 1]\n",
       "Random permutations:\n",
       " 1 [0]\n",
       " 2 [1, 0]\n",
-      " 3 [1, 2, 0]\n",
-      " 4 [3, 0, 2, 1]\n",
-      " 5 [2, 3, 4, 0, 1]\n",
-      " 6 [5, 2, 0, 1, 3, 4]\n",
-      " 7 [5, 6, 3, 0, 1, 2, 4]\n",
+      " 3 [1, 0, 2]\n",
+      " 4 [0, 2, 3, 1]\n",
+      " 5 [2, 4, 0, 1, 3]\n",
+      " 6 [3, 5, 0, 1, 4, 2]\n",
+      " 7 [1, 0, 4, 2, 3, 5, 6]\n",
       "Random derangements:\n",
       " 2 [1, 0]\n",
       " 3 [1, 2, 0]\n",
-      " 4 [2, 3, 0, 1]\n",
-      " 5 [3, 0, 1, 4, 2]\n",
-      " 6 [4, 0, 3, 2, 5, 1]\n",
-      " 7 [1, 6, 5, 2, 3, 0, 4]\n",
-      "2018-09-27 09:33:35,725 Stop MPyC runtime -- elapsed time: 0:00:02.749991\n"
+      " 4 [1, 0, 3, 2]\n",
+      " 5 [1, 4, 3, 0, 2]\n",
+      " 6 [3, 0, 5, 1, 2, 4]\n",
+      " 7 [1, 3, 4, 6, 0, 2, 5]\n",
+      "2018-10-09 14:08:16,868 Stop MPyC runtime -- elapsed time: 0:00:00.953153\n"
      ]
     },
     {
@@ -571,7 +571,7 @@
      "output_type": "stream",
      "text": [
       "Traceback (most recent call last):\n",
-      "  File \"SecretSantaExplained.py\", line 249, in <module>\n",
+      "  File \"SecretSantaExplained.py\", line 247, in <module>\n",
       "    get_ipython().system('run 1 SecretSantaExplained.py')\n",
       "NameError: name 'get_ipython' is not defined\n"
      ]
@@ -587,7 +587,7 @@
    "source": [
     "If desired, the code can also be run with two or four parties. The included test setup supports up to $m=5$ parties, of which at most $t$ can be corrupt, with $0\\leq t\\leq \\lfloor (m-1)/2 \\rfloor$.\n",
     "\n",
-    "This concludes the explanation of our MPyC protocol for the Secret Santa problem. The Python script [secretsanta.py](secretsanta.py) contains a slightly more extensive demo, showing how secure fixed-point arithmetic or secure prime fields can be used instead of secure integers."
+    "This concludes the explanation of our MPyC protocol for the Secret Santa problem. The Python script [secretsanta.py](secretsanta.py) contains a slightly more extensive demo, showing how secure fixed-point arithmetic or secure finite fields can be used instead of secure integers."
    ]
   }
  ],
