--- a/demos/4demos.ipynb
+++ b/demos/4demos.ipynb
@@ -34,32 +34,40 @@
      "output_type": "stream",
      "text": [
       "Setting input to default = 8\n",
-      "2018-09-27 09:58:00,447 Start MPyC runtime v0.3.5\n",
-      "Using secure fields: <class 'mpyc.sectypes.SecFld4(11)'>\n",
-      "2 [1, 0]\n",
-      "3 [1, 2, 0]\n",
-      "4 [3, 2, 0, 1]\n",
-      "5 [4, 3, 1, 0, 2]\n",
-      "6 [2, 0, 4, 5, 1, 3]\n",
-      "7 [4, 0, 5, 1, 2, 6, 3]\n",
-      "8 [7, 4, 1, 5, 3, 2, 0, 6]\n",
+      "2018-10-14 11:41:40,282 Start MPyC runtime v0.4.1\n",
       "Using secure integers: <class 'mpyc.sectypes.SecInt32'>\n",
       "2 [1, 0]\n",
-      "3 [2, 0, 1]\n",
-      "4 [3, 0, 1, 2]\n",
-      "5 [2, 3, 4, 1, 0]\n",
-      "6 [4, 2, 1, 5, 3, 0]\n",
-      "7 [3, 6, 1, 5, 2, 4, 0]\n",
-      "8 [2, 4, 0, 6, 7, 3, 5, 1]\n",
+      "3 [1, 2, 0]\n",
+      "4 [2, 0, 3, 1]\n",
+      "5 [2, 3, 0, 4, 1]\n",
+      "6 [2, 0, 3, 1, 5, 4]\n",
+      "7 [6, 4, 3, 0, 5, 2, 1]\n",
+      "8 [5, 2, 6, 7, 1, 0, 4, 3]\n",
       "Using secure fixed-point numbers: <class 'mpyc.sectypes.SecFxp32:16'>\n",
       "2 [1.0, 0.0]\n",
       "3 [2.0, 0.0, 1.0]\n",
-      "4 [2.0, 0.0, 3.0, 1.0]\n",
-      "5 [3.0, 2.0, 4.0, 1.0, 0.0]\n",
-      "6 [2.0, 3.0, 5.0, 4.0, 0.0, 1.0]\n",
-      "7 [6.0, 4.0, 5.0, 2.0, 0.0, 3.0, 1.0]\n",
-      "8 [4.0, 2.0, 3.0, 0.0, 1.0, 7.0, 5.0, 6.0]\n",
-      "2018-09-27 09:58:00,896 Stop MPyC runtime -- elapsed time: 0:00:00.433599\n"
+      "4 [1.0, 2.0, 3.0, 0.0]\n",
+      "5 [2.0, 3.0, 1.0, 4.0, 0.0]\n",
+      "6 [3.0, 5.0, 0.0, 1.0, 2.0, 4.0]\n",
+      "7 [3.0, 6.0, 1.0, 5.0, 0.0, 4.0, 2.0]\n",
+      "8 [7.0, 0.0, 5.0, 1.0, 2.0, 3.0, 4.0, 6.0]\n",
+      "Using secure prime fields: <class 'mpyc.sectypes.SecFld3(11)'>\n",
+      "2 [1, 0]\n",
+      "3 [2, 0, 1]\n",
+      "4 [3, 2, 0, 1]\n",
+      "5 [4, 3, 1, 2, 0]\n",
+      "6 [2, 4, 3, 0, 5, 1]\n",
+      "7 [5, 0, 1, 4, 3, 6, 2]\n",
+      "8 [4, 0, 5, 6, 7, 1, 2, 3]\n",
+      "Using secure binary fields: <class 'mpyc.sectypes.SecFld3(x^3+x+1)'>\n",
+      "2 [1, 0]\n",
+      "3 [x, 0, 1]\n",
+      "4 [x, x+1, 1, 0]\n",
+      "5 [1, x^2, x+1, x, 0]\n",
+      "6 [x^2+1, 0, x^2, 1, x+1, x]\n",
+      "7 [x^2+x, x^2+1, 1, 0, x+1, x^2, x]\n",
+      "8 [x+1, x^2, x^2+1, x, 0, 1, x^2+x+1, x^2+x]\n",
+      "2018-10-14 11:41:41,081 Stop MPyC runtime -- elapsed time: 0:00:00.782733\n"
      ]
     }
    ],
@@ -76,19 +84,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-09-27 09:58:04,647 Start MPyC runtime v0.3.5\n",
-      "2018-09-27 09:58:04,678 Attribute node Outlook\n",
-      "2018-09-27 09:58:04,710 Attribute node Humidity\n",
-      "2018-09-27 09:58:04,729 Leaf node label 0\n",
-      "2018-09-27 09:58:04,747 Leaf node label 1\n",
-      "2018-09-27 09:58:04,759 Leaf node label 1\n",
-      "2018-09-27 09:58:04,780 Attribute node Wind\n",
-      "2018-09-27 09:58:04,803 Leaf node label 0\n",
-      "2018-09-27 09:58:04,811 Leaf node label 1\n",
+      "2018-10-14 11:41:50,650 Start MPyC runtime v0.4.1\n",
+      "2018-10-14 11:41:50,681 Attribute node Outlook\n",
+      "2018-10-14 11:41:50,707 Attribute node Humidity\n",
+      "2018-10-14 11:41:50,731 Leaf node label 0\n",
+      "2018-10-14 11:41:50,743 Leaf node label 1\n",
+      "2018-10-14 11:41:50,757 Leaf node label 1\n",
+      "2018-10-14 11:41:50,782 Attribute node Wind\n",
+      "2018-10-14 11:41:50,799 Leaf node label 0\n",
+      "2018-10-14 11:41:50,814 Leaf node label 1\n",
       "Tree = ('Outlook', [('Humidity', [0, 1]), 1, ('Wind', [0, 1])])\n",
       "Tree height = 2\n",
       "Tree size = 8\n",
-      "2018-09-27 09:58:04,819 Stop MPyC runtime -- elapsed time: 0:00:00.155962\n"
+      "2018-10-14 11:41:50,818 Stop MPyC runtime -- elapsed time: 0:00:00.167945\n"
      ]
     }
    ],
@@ -105,21 +113,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-09-27 09:58:07,181 Setting certificate file to default = c0.cert\n",
-      "2018-09-27 09:58:07,181 Start MPyC runtime v0.3.5\n",
-      "2018-09-27 09:58:07,181 0 Termination?...\n",
-      "2018-09-27 09:58:07,197 1 Determining pivot...\n",
-      "2018-09-27 09:58:07,212 1 Updating tableau...\n",
-      "2018-09-27 09:58:07,219 1 Termination?...\n",
-      "2018-09-27 09:58:07,231 2 Determining pivot...\n",
-      "2018-09-27 09:58:07,244 2 Updating tableau...\n",
-      "2018-09-27 09:58:07,246 2 Termination?...\n",
-      "2018-09-27 09:58:07,258 Termination...\n",
+      "2018-10-14 11:41:52,242 Setting certificate file to default = c0.cert\n",
+      "2018-10-14 11:41:52,242 Start MPyC runtime v0.4.1\n",
+      "2018-10-14 11:41:52,242 0 Termination?...\n",
+      "2018-10-14 11:41:52,257 1 Determining pivot...\n",
+      "2018-10-14 11:41:52,257 1 Updating tableau...\n",
+      "2018-10-14 11:41:52,273 1 Termination?...\n",
+      "2018-10-14 11:41:52,273 2 Determining pivot...\n",
+      "2018-10-14 11:41:52,289 2 Updating tableau...\n",
+      "2018-10-14 11:41:52,289 2 Termination?...\n",
+      "2018-10-14 11:41:52,322 Termination...\n",
       " max(f) = 21 / 2 = 10.500000\n",
-      "2018-09-27 09:58:07,262 Computing solution...\n",
-      "2018-09-27 09:58:07,270 Computing dual solution...\n",
-      "2018-09-27 09:58:07,277 Stop MPyC runtime -- elapsed time: 0:00:00.095821\n",
-      "2018-09-27 09:58:07,281 Writing output to c0.cert.\n"
+      "2018-10-14 11:41:52,333 Computing solution...\n",
+      "2018-10-14 11:41:52,345 Computing dual solution...\n",
+      "2018-10-14 11:41:52,353 Stop MPyC runtime -- elapsed time: 0:00:00.111426\n",
+      "2018-10-14 11:41:52,357 Writing output to c0.cert.\n"
      ]
     }
    ],
@@ -136,66 +144,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-09-27 09:58:13,871 Start MPyC runtime v0.3.5\n",
-      "2018-09-27 09:58:13,871 --------------- INPUT   -------------\n",
-      "Type = SecInt37, range = (7820, 7821)\n",
-      "Labels: [0]\n",
+      "2018-10-14 11:41:55,487 Start MPyC runtime v0.4.1\n",
+      "2018-10-14 11:41:55,487 --------------- INPUT   -------------\n",
+      "Type = SecInt37, range = (1453, 1454)\n",
+      "Labels: [4]\n",
       "[[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
       " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
       " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
       " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
       " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 0 0 0 0 0 0 1 1 1 1 0 0 0]\n",
-      " [0 0 0 0 0 0 0 1 1 1 1 1 1 1 0 0 0 0 0 0 0 1 1 1 1 0 0 0]\n",
-      " [0 0 0 0 0 0 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 1 1 1 1 0 0 0]\n",
-      " [0 0 0 0 0 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 1 1 1 1 0 0 0]\n",
-      " [0 0 0 0 0 1 1 1 1 1 1 0 0 0 0 0 0 0 0 1 1 1 1 1 1 0 0 0]\n",
-      " [0 0 0 0 0 1 1 1 1 1 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 0 0 0]\n",
-      " [0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0]\n",
-      " [0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0]\n",
-      " [0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 1 1 1 1 0 1 1 1 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 1 1 1 1 1 0 1 1 1 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 1 1 1 1 1 0 0 1 1 1 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0 0 0 0]\n",
       " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
       " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
       " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]]\n",
-      "2018-09-27 09:58:13,987 --------------- LAYER 1 -------------\n",
-      "2018-09-27 09:58:14,000 - - - - - - - - conv2d  - - - - - - -\n",
-      "2018-09-27 09:58:15,213 Barrier 0 1 [1547]\n",
-      "2018-09-27 09:58:15,228 - - - - - - - - maxpool - - - - - - -\n",
-      "2018-09-27 09:58:49,145 Barrier 0 1 [76811]\n",
-      "2018-09-27 09:58:49,145 - - - - - - - - ReLU    - - - - - - -\n",
-      "2018-09-27 09:59:00,112 Barrier 0 1 [101903]\n",
-      "2018-09-27 09:59:00,112 --------------- LAYER 2 -------------\n",
-      "2018-09-27 09:59:00,357 - - - - - - - - conv2d  - - - - - - -\n",
-      "2018-09-27 09:59:03,310 Barrier 1 1 [101903]\n",
-      "2018-09-27 09:59:06,065 Barrier 1 1 [101903]\n",
-      "2018-09-27 09:59:08,800 Barrier 1 1 [101903]\n",
-      "2018-09-27 09:59:11,549 Barrier 1 1 [101903]\n",
-      "2018-09-27 09:59:12,002 Barrier 0 1 [101903]\n",
-      "2018-09-27 09:59:12,018 - - - - - - - - maxpool - - - - - - -\n",
-      "2018-09-27 09:59:31,425 Barrier 0 1 [139535]\n",
-      "2018-09-27 09:59:31,441 - - - - - - - - ReLU    - - - - - - -\n",
-      "2018-09-27 09:59:37,712 Barrier 0 1 [152083]\n",
-      "2018-09-27 09:59:37,712 --------------- LAYER 3 -------------\n",
-      "2018-09-27 09:59:54,640 - - - - - - - - fc      - - - - - - -\n",
-      "2018-09-27 10:00:00,509 - - - - - - - - ReLU    - - - - - - -\n",
-      "2018-09-27 10:00:02,837 Barrier 0 1 [156183]\n",
-      "2018-09-27 10:00:02,837 --------------- LAYER 4 -------------\n",
-      "2018-09-27 10:00:03,342 - - - - - - - - fc      - - - - - - -\n",
-      "2018-09-27 10:00:03,357 --------------- OUTPUT  -------------\n",
-      "0 0\n",
-      "[21461375426, -11163412720, -1648433239, -7649256117, -5013386847, -2194300078, 566133175, -6189992424, -5910179438, -880303545]\n",
-      "2018-09-27 10:00:03,390 Stop MPyC runtime -- elapsed time: 0:01:49.518513\n"
+      "2018-10-14 11:41:55,702 --------------- LAYER 1 -------------\n",
+      "2018-10-14 11:41:55,743 - - - - - - - - conv2d  - - - - - - -\n",
+      "2018-10-14 11:41:56,991 Barrier 0 1 [2172]\n",
+      "2018-10-14 11:41:56,991 - - - - - - - - maxpool - - - - - - -\n",
+      "2018-10-14 11:42:31,408 Barrier 0 1 [77436]\n",
+      "2018-10-14 11:42:31,408 - - - - - - - - ReLU    - - - - - - -\n",
+      "2018-10-14 11:42:42,307 Barrier 0 1 [102528]\n",
+      "2018-10-14 11:42:42,322 --------------- LAYER 2 -------------\n",
+      "2018-10-14 11:42:42,615 - - - - - - - - conv2d  - - - - - - -\n",
+      "2018-10-14 11:42:45,699 Barrier 1 1 [102528]\n",
+      "2018-10-14 11:42:48,514 Barrier 1 1 [102528]\n",
+      "2018-10-14 11:42:51,297 Barrier 1 1 [102528]\n",
+      "2018-10-14 11:42:54,082 Barrier 1 1 [102528]\n",
+      "2018-10-14 11:42:54,545 Barrier 0 1 [102528]\n",
+      "2018-10-14 11:42:54,560 - - - - - - - - maxpool - - - - - - -\n",
+      "2018-10-14 11:43:13,960 Barrier 0 1 [140160]\n",
+      "2018-10-14 11:43:13,960 - - - - - - - - ReLU    - - - - - - -\n",
+      "2018-10-14 11:43:20,234 Barrier 0 1 [152708]\n",
+      "2018-10-14 11:43:20,234 --------------- LAYER 3 -------------\n",
+      "2018-10-14 11:43:37,238 - - - - - - - - fc      - - - - - - -\n",
+      "2018-10-14 11:43:43,053 - - - - - - - - ReLU    - - - - - - -\n",
+      "2018-10-14 11:43:45,347 Barrier 0 1 [156808]\n",
+      "2018-10-14 11:43:45,362 --------------- LAYER 4 -------------\n",
+      "2018-10-14 11:43:45,963 - - - - - - - - fc      - - - - - - -\n",
+      "2018-10-14 11:43:45,995 --------------- OUTPUT  -------------\n",
+      "4 4\n",
+      "[-11126995326, -720993644, -5095728697, -7044144301, 15641919704, -2635754274, -15642042344, -3967040013, -7629919109, 8205683087]\n",
+      "2018-10-14 11:43:46,034 Stop MPyC runtime -- elapsed time: 0:01:50.546162\n"
      ]
     }
    ],
@@ -221,24 +229,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using secure fields: <class 'mpyc.sectypes.SecFld4(11)'>\n",
+      "Using secure integers: <class 'mpyc.sectypes.SecInt32'>\n",
       "2 [1, 0]\n",
       "3 [1, 2, 0]\n",
       "4 [2, 3, 0, 1]\n",
-      "5 [2, 4, 3, 0, 1]\n",
-      "6 [5, 4, 0, 2, 1, 3]\n",
-      "Using secure integers: <class 'mpyc.sectypes.SecInt32'>\n",
-      "2 [1, 0]\n",
-      "3 [2, 0, 1]\n",
-      "4 [1, 2, 3, 0]\n",
-      "5 [1, 4, 0, 2, 3]\n",
-      "6 [1, 3, 5, 2, 0, 4]\n",
+      "5 [2, 0, 1, 4, 3]\n",
+      "6 [1, 4, 0, 5, 2, 3]\n",
       "Using secure fixed-point numbers: <class 'mpyc.sectypes.SecFxp32:16'>\n",
       "2 [1.0, 0.0]\n",
-      "3 [2.0, 0.0, 1.0]\n",
-      "4 [2.0, 0.0, 3.0, 1.0]\n",
-      "5 [3.0, 4.0, 0.0, 1.0, 2.0]\n",
-      "6 [1.0, 5.0, 0.0, 4.0, 2.0, 3.0]\n",
+      "3 [1.0, 2.0, 0.0]\n",
+      "4 [3.0, 2.0, 0.0, 1.0]\n",
+      "5 [3.0, 2.0, 1.0, 4.0, 0.0]\n",
+      "6 [1.0, 3.0, 0.0, 2.0, 5.0, 4.0]\n",
+      "Using secure prime fields: <class 'mpyc.sectypes.SecFld3(11)'>\n",
+      "2 [1, 0]\n",
+      "3 [1, 2, 0]\n",
+      "4 [1, 3, 0, 2]\n",
+      "5 [1, 4, 3, 2, 0]\n",
+      "6 [4, 3, 1, 0, 5, 2]\n",
+      "Using secure binary fields: <class 'mpyc.sectypes.SecFld3(x^3+x+1)'>\n",
+      "2 [1, 0]\n",
+      "3 [x, 0, 1]\n",
+      "4 [x, x+1, 0, 1]\n",
+      "5 [x, x+1, 0, x^2, 1]\n",
+      "6 [x+1, x^2, x^2+1, x, 1, 0]\n",
       "\n",
       "Tree = ('A4', [('A2', [2, 2, 2, 2, 2]), ('A2', [1, 2, 2, 2, 2]), ('A2', [1, 1, 2, 2, 2]), ('A3', [2, 1, 1, 1, 1]), ('A3', [2, 1, 1, 1, 1])])\n",
       "Tree height = 2\n",
@@ -246,44 +260,44 @@
       "\n",
       " max(f) = 1705860 / 495720 = 3.441176\n",
       "\n",
-      "Type = SecFxp10:4, range = (2870, 2871)\n",
-      "Labels: [9]\n",
+      "Type = SecFxp10:4, range = (2726, 2727)\n",
+      "Labels: [2]\n",
       "[[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
       " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
       " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
       " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 0 0 0 1 1 1 1 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 1 1 1 0 0 0 0 1 1 1 1 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 1 1 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 1 1 1 1 0 0 1 1 1 1 0 1 1 1 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
       " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
       " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 1 1 1 0 0 0 0 1 1 1 1 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 1 1 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0 1 1 1 1 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 1 1 1 0 0 0 0 0 1 1 1 1 1 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 1 1 1 0 0 0 0 1 1 1 1 1 1 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 1 1 1 0 0 0 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 1 1 1 1 1 1 0 0 1 1 1 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 1 1 1 1 0 0 0 1 1 1 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0 0 0 0 0]\n",
       " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
       " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]]\n",
-      "9 9.0\n",
-      "[-3.5, -8.875, -2.875, -0.8125, -0.6875, -7.375, -11.3125, 2.6875, 0.625, 13.3125]\n"
+      "2 2.0\n",
+      "[1.875, -2.0625, 15.5625, -2.125, -5.3125, -10.75, -8.3125, 0.5, 0.25, -4.4375]\n"
      ]
     }
    ],
    "source": [
     "import sys\n",
-    "mpc.log(False)\n",
+    "mpc.logging(False)\n",
     "\n",
     "sys.argv[1:] = ['6']\n",
     "secretsanta.main()\n",
