Secure random module (#7)
New mpyc.random module providing secure pseudorandom numbers etc.
For now, see tests/test_random.py for simple usage examples.

--- a/demos/SecretSantaExplained.ipynb
+++ b/demos/SecretSantaExplained.ipynb
@@ -69,7 +69,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-10-23 09:41:39,962 Start MPyC runtime v0.4.2\n"
+      "2018-11-12 09:51:19,049 Start MPyC runtime v0.4.3\n"
      ]
     }
    ],
@@ -207,7 +207,7 @@
     "    p = [secint(i) for i in range(n)]          # initialize p to identity permutation\n",
     "    for i in range(n-1):\n",
     "        x_r = random_unit_vector(n-i)          # x_r = [0]*(r-i) + [1] + [0]*(n-r), i <= r < n\n",
-    "        p_r = mpc.in_prod(p[i-n:], x_r)        # p_r = p[r]\n",
+    "        p_r = mpc.in_prod(p[i:], x_r)          # p_r = p[r]\n",
     "        d_r = mpc.scalar_mul(p[i] - p_r, x_r)  # d_r = [0]*(r-i) + [p[i] - p[r]] + [0]*(n-r)\n",
     "        p[i] = p_r                             # p[i] = p[r]\n",
     "        for j in range(n-i):\n",
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -301,11 +301,11 @@
       "Random unit vectors:\n",
       " 1 [1]\n",
       " 2 [1, 0]\n",
-      " 3 [0, 1, 0]\n",
-      " 4 [0, 0, 1, 0]\n",
-      " 5 [0, 0, 0, 0, 1]\n",
-      " 6 [0, 0, 1, 0, 0, 0]\n",
-      " 7 [0, 0, 1, 0, 0, 0, 0]\n"
+      " 3 [1, 0, 0]\n",
+      " 4 [0, 0, 0, 1]\n",
+      " 5 [1, 0, 0, 0, 0]\n",
+      " 6 [0, 0, 0, 0, 0, 1]\n",
+      " 7 [0, 0, 0, 1, 0, 0, 0]\n"
      ]
     }
    ],
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -327,12 +327,12 @@
      "text": [
       "Random permutations:\n",
       " 1 [0]\n",
-      " 2 [0, 1]\n",
+      " 2 [1, 0]\n",
       " 3 [2, 0, 1]\n",
-      " 4 [1, 0, 2, 3]\n",
-      " 5 [2, 3, 4, 0, 1]\n",
-      " 6 [4, 0, 2, 1, 3, 5]\n",
-      " 7 [5, 2, 3, 6, 0, 1, 4]\n"
+      " 4 [1, 3, 2, 0]\n",
+      " 5 [2, 3, 1, 0, 4]\n",
+      " 6 [2, 0, 5, 1, 4, 3]\n",
+      " 7 [5, 4, 6, 1, 3, 2, 0]\n"
      ]
     }
    ],
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -354,11 +354,11 @@
      "text": [
       "Random derangements:\n",
       " 2 [1, 0]\n",
-      " 3 [2, 0, 1]\n",
-      " 4 [3, 2, 0, 1]\n",
-      " 5 [4, 3, 1, 2, 0]\n",
-      " 6 [1, 3, 4, 5, 0, 2]\n",
-      " 7 [2, 6, 5, 4, 0, 3, 1]\n"
+      " 3 [1, 2, 0]\n",
+      " 4 [3, 2, 1, 0]\n",
+      " 5 [4, 2, 0, 1, 3]\n",
+      " 6 [2, 4, 1, 5, 3, 0]\n",
+      " 7 [2, 6, 0, 5, 1, 3, 4]\n"
      ]
     }
    ],
@@ -371,14 +371,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-10-23 09:41:40,805 Stop MPyC runtime -- elapsed time: 0:00:00.831105\n"
+      "2018-11-12 09:53:04,882 Stop MPyC runtime -- elapsed time: 0:01:45.817151\n"
      ]
     }
    ],
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -409,8 +409,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "C:\\Users\\Berry\\Documents\\GitHub\\mympyc\\demos>python run.py 1 SecretSantaExplained.py \n",
-      "2018-10-23 09:41:41,327 Start MPyC runtime v0.4.2\n",
+      "C:\\Users\\bschoe\\Documents\\GitHub\\mympyc\\demos>python run.py 1 SecretSantaExplained.py \n",
+      "2018-11-12 09:53:07,978 Start MPyC runtime v0.4.3\n",
       "Example: (5+13)*(5-13) = -144\n",
       "Random unit vectors:\n",
       " 1 [1]\n",
@@ -435,7 +435,7 @@
       " 5 [1, 0, 3, 4, 2]\n",
       " 6 [1, 5, 3, 2, 0, 4]\n",
       " 7 [6, 5, 3, 2, 0, 4, 1]\n",
-      "2018-10-23 09:41:41,702 Stop MPyC runtime -- elapsed time: 0:00:00.374999\n"
+      "2018-11-12 09:53:08,166 Stop MPyC runtime -- elapsed time: 0:00:00.187507\n"
      ]
     },
     {
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -472,9 +472,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "C:\\Users\\Berry\\Documents\\GitHub\\mympyc\\demos>python run.py 3 SecretSantaExplained.py \n",
-      "2018-10-23 09:41:42,364 Start MPyC runtime v0.4.2\n",
-      "2018-10-23 09:41:42,895 Connected to all parties.\n",
+      "C:\\Users\\bschoe\\Documents\\GitHub\\mympyc\\demos>python run.py 3 SecretSantaExplained.py \n",
+      "2018-11-12 09:53:14,815 Start MPyC runtime v0.4.3\n",
+      "2018-11-12 09:53:14,815 Connected to all parties.\n",
       "Example: (5+13)*(5-13) = -144\n",
       "Random unit vectors:\n",
       " 1 [1]\n",
@@ -499,7 +499,7 @@
       " 5 [2, 3, 0, 4, 1]\n",
       " 6 [2, 4, 3, 5, 0, 1]\n",
       " 7 [3, 0, 5, 1, 2, 6, 4]\n",
-      "2018-10-23 09:41:43,333 Stop MPyC runtime -- elapsed time: 0:00:00.968745\n"
+      "2018-11-12 09:53:15,691 Stop MPyC runtime -- elapsed time: 0:00:00.875021\n"
      ]
     },
     {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -536,9 +536,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "C:\\Users\\Berry\\Documents\\GitHub\\mympyc\\demos>python run.py 5 SecretSantaExplained.py \n",
-      "2018-10-23 09:41:44,443 Start MPyC runtime v0.4.2\n",
-      "2018-10-23 09:41:44,974 Connected to all parties.\n",
+      "C:\\Users\\bschoe\\Documents\\GitHub\\mympyc\\demos>python run.py 5 SecretSantaExplained.py \n",
+      "2018-11-12 09:54:43,544 Start MPyC runtime v0.4.3\n",
+      "2018-11-12 09:54:44,075 Connected to all parties.\n",
       "Example: (5+13)*(5-13) = -144\n",
       "Random unit vectors:\n",
       " 1 [1]\n",
@@ -563,7 +563,7 @@
       " 5 [1, 4, 3, 0, 2]\n",
       " 6 [3, 0, 5, 1, 2, 4]\n",
       " 7 [1, 3, 4, 6, 0, 2, 5]\n",
-      "2018-10-23 09:41:46,099 Stop MPyC runtime -- elapsed time: 0:00:01.656250\n"
+      "2018-11-12 09:54:44,513 Stop MPyC runtime -- elapsed time: 0:00:00.953145\n"
      ]
     },
     {
